Fix custom section margins on mobile

--- a/src/containers/TransactionPage/TransactionFields/TransactionFields.module.css
+++ b/src/containers/TransactionPage/TransactionFields/TransactionFields.module.css
@@ -1,11 +1,11 @@
 @import '../../../styles/customMediaQueries.css';
 
 .transactionFieldsContainer {
-  margin: 42px 24px 0 24px;
+  margin: 42px 0 0 0;
 
   @media (--viewportMedium) {
     padding: 7px 0 1px 0;
-    margin: 16px 24px 0 24px;
+    margin: 16px 0 0 0;
   }
   @media (--viewportLarge) {
     margin: 16px 0 0 0;
@@ -21,4 +21,9 @@
   font-weight: var(--fontWeightBold);
   padding: 0;
   margin: 0 0 8px 0;
+}
+
+.transactionFieldSection {
+  padding: 0px;
+  margin-bottom: 24px;
 }
